--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="welcome-section text-center">
-  <h1 class="display-4"><i class="bi bi-camera2"></i> Bem-vindo ao PhotoBlog</h1>
-  <p class="lead">Compartilhe seus momentos especiais com o mundo!</p>
+  <h1 class="display-4"><i class="bi bi-journal-text"></i> Bem-vindo ao Blog</h1>
+  <p class="lead">Compartilhe suas ideias com o mundo!</p>
   <%= link_to new_post_path, class: "btn btn-light btn-lg mt-3" do %>
     <i class="bi bi-plus-circle"></i> Criar Novo Post
   <% end %>
